docs/src/scss/_clipboardjs.scss
.md-typeset {

  /* Normal pre/code style */
  pre {
    position: relative;
    padding: 0;
    overflow: visible;

    @media only screen and (max-width: 44.9375em) {
      padding: 0;
    }

    &[id]::before {
      display: inline;
    }

    > code {
      display: block;
      padding: 1rem 1.2rem;
      overflow: auto;

      // [mobile -]: Stretch to whole width
      @media only screen and (max-width: 44.9375em) {
        padding: 1rem 1.6rem;
      }
    }
  }

  /* Codehilite Pygments blocks */
  .codehilite {
    position: relative;
    padding: 0;
    overflow: visible;

    &[id]::before {
      display: inline;
    }

    pre,
    code {
      display: block;
      position: static;
      padding: 1rem 1.2rem 0.8rem;
      overflow: auto;
    }
  }

  > .codehilite {

    @media only screen and (max-width: 44.9375em) {
      padding: 0;
    }

    pre,
    code {
      @media only screen and (max-width: 44.9375em) {
        padding: 1rem 1.6rem 0.8rem;
      }
    }
  }

  > .codehilitetable {
    .codehilite {
      padding: 0;
    }

    @media only screen and (max-width: 44.9375em) {
      .codehilite {
        padding: 0;
      }

      .codehilite > pre {
        padding: 1rem 1.6rem;
      }
    }
  }

  /* Clipboard copy button */
  .clip-btn {
    overflow: visible;
    display: inline-block;
    position: absolute;
    top: 0.2rem;
    right: 0.2rem;
    width: 3.2rem;
    height: 3.2rem;
    transition: opacity 0.3s;
    border-radius: 50%;
    background-color: $clr-grey-400;
    color: $clr-white;
    cursor: pointer;
    opacity: 0;

    .md-icon--clipboard {
      position: relative;
      top: 0.1rem;
      font-size: 1.8rem;

      &::before {
        content: "assignment";
      }
    }
  }

  /* Clipboard hover style */
  .codehilite {
    &:hover {
      .clip-btn {
        transition: opacity 0.3s;
        opacity: 0.4;

        &:hover {
          @include z-depth(3);

          transition: opacity 0.1s;
          opacity: 1;
        }
      }
    }
  }

  /* Clipboard tooltip */
  .clip-tip {
    &::after {
      position: absolute;
      top: 0.3rem;
      left: -0.5rem;
      padding: 0.6rem 1rem;
      transform: translateX(-100%);
      transition: opacity 0.2s;
      border-radius: 0.2rem;
      background: $clr-grey-800;
      color: $clr-white;
      font-size: ms(-1);
      font-weight: 700;
      white-space: nowrap;
      content: attr(aria-label);
      opacity: 1;
      visibility: hidden;
    }

    &:hover {
      &::after {
        display: block;
        opacity: 0.9;
        visibility: visible;
      }
    }
  }
}

// Build primary colors
@each $name, $color in (
  "red":         $clr-red-400,
  "pink":        $clr-pink-500,
  "purple":      $clr-purple-400,
  "deep-purple": $clr-deep-purple-400,
  "indigo":      $clr-indigo-500,
  "blue":        $clr-blue-500,
  "light-blue":  $clr-light-blue-500,
  "cyan":        $clr-cyan-500,
  "teal":        $clr-teal-500,
  "green":       $clr-green-500,
  "light-green": $clr-light-green-600,
  "lime":        $clr-lime-600,
  "yellow":      $clr-yellow-800,
  "amber":       $clr-amber-600,
  "orange":      $clr-orange-600,
  "deep-orange": $clr-deep-orange-400,
  "brown":       $clr-brown-500,
  "grey":        $clr-grey-600,
  "blue-grey":   $clr-blue-grey-600
) {
  [data-md-color-primary="#{$name}"] {
    .codehilite:hover .clip-btn:hover {
      background-color: $color;
    }
  }
}

